# asap-protocol

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  coverage_report.json  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  registry.json  revoked_agents.json  sitemap.xml
.agents/rules/: architecture-principles.md  frontend.md
.agents/workflows/: development.md
.cursor/: README.md
.cursor/commands/: code-quality-review.md  code-quality-review.mdc  create-prd.md  generate-tasks.md  reflect.md  remove-ai-slop.md  security-pr-review.md  security-review.md  task-list-development.md  test-coverage-review.md
.cursor/design/: analysis-bento-grid.md  analysis-sign-in-3d.md  design-system.md  mobile-strategy.md
.cursor/dev-planning/: checkpoints.md  manual-release-testing.md  release-runbook.md  upstream-slowapi-deprecation.md
.cursor/docs/: general-specs.md  rate-limiting-testing-patterns.md  sprint-planning.md
.cursor/product-specs/: ADR.md  README.md  repository-strategy.md  roadmap-to-marketplace.md  v0-original-specs.md  vision-agent-marketplace.md
.cursor/rules/: agent-clean-code.mdc  architecture-principles.mdc  frontend-best-practices.mdc  git-authorship.mdc  git-commits.mdc  python-best-practices.mdc  security-standards.mdc  testing-rate-limiting.mdc  testing-standards.mdc  testing.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  dependabot.yml  release-notes-v0.5.0.md  release-notes-v1.0.0.md
.github/ISSUE_TEMPLATE/: adapter-request.yml  bug_report.yml  feature_request.yml  register_agent.yml  remove_agent.yml  request_verification.yml  revoke_agent.yml
.github/workflows/: auto-merge-registry.yml  ci.yml  docs.yml  hotfix-release.yml  mastra-ci.yml  openai-agents-ci.yml  publish-typescript.yml  register-agent.yml  release.yml  remove-agent.yml  revoke-agent.yml  starters-smoke.yml  telemetry-weekly.yml  typescript-sdk.yml  validate-registry.yml
adapters/mcp-auth-bridge/: index.html
adapters/openapi/: index.html
adr/: index.html
adr/ADR-001-ulid-for-id-generation/: index.html
adr/ADR-002-async-first-api-design/: index.html
adr/ADR-003-jsonrpc20-binding/: index.html
adr/ADR-004-pydantic-for-models/: index.html
adr/ADR-005-state-machine-design/: index.html
adr/ADR-006-security-defaults/: index.html
adr/ADR-007-fastapi-for-server/: index.html
adr/ADR-008-httpx-for-client/: index.html
adr/ADR-009-snapshot-vs-event-sourced/: index.html
adr/ADR-010-python-313-requirement/: index.html
adr/ADR-011-per-sender-rate-limiting/: index.html
adr/ADR-012-error-taxonomy/: index.html
adr/ADR-013-mcp-integration-approach/: index.html
adr/ADR-014-testing-strategy/: index.html
adr/ADR-015-observability-design/: index.html
adr/ADR-016-versioning-policy/: index.html
adr/ADR-017-failure-injection-strategy/: index.html
adr/ADR-018-streaming-transport/: index.html
adr/ADR-019-unified-versioning/: index.html
adr/template/: index.html
api-reference/: index.html
apps/example-agent/: README.md  pyproject.toml
apps/example-agent/src/example_agent/: __init__.py
apps/example-agent/tests/: test_compliance.py
apps/example-mastra/: .env.example  README.md  eslint.config.mjs  next.config.ts  package.json  tsconfig.json
apps/example-nextjs/: .env.example  eslint.config.mjs  next.config.ts  package.json
apps/example-openai-agents/: .env.example  README.md  eslint.config.js  (+2 more)
apps/registry-bot/: README.md  pyproject.toml
apps/registry-bot/src/registry_bot/: __init__.py  app.py
asap-compliance/: README.md  pyproject.toml
asap-compliance/asap_compliance/: __init__.py  config.py  harness.py  pytest_plugin.py
asap-compliance/asap_compliance/models/: __init__.py  mcp_manifest.py
asap-compliance/asap_compliance/validators/: __init__.py  handshake.py  mcp_auth.py  mcp_auth_transport.py  schema.py  sla.py  state.py
asap-compliance/tests/: __init__.py  conftest.py  test_handshake.py  test_mcp_auth.py  test_plugin.py  test_schema.py  test_sla.py  test_state.py  test_state_integration.py
asap-compliance/tests/fixtures/: mcp_auth_bridge_manifest.json
audit/: index.html
benchmarks/: README.md  RESULTS.md  __init__.py  benchmark_crypto.py  benchmark_models.py  benchmark_transport.py  conftest.py  load_test.py  memory_test.py  stress_test.py
capabilities/: index.html
ci-compliance/: index.html
cli/: index.html
docs/: api-reference.md  audit.md  ci-compliance.md  cli.md  error-codes.md  error-handling.md  index.md  mcp-integration.md  metrics.md  migration.md  observability.md  raw-fetch.md  security.md  state-management.md  testing.md  transport.md  troubleshooting.md
engineering/: README.md  checkpoints.md  manual-release-testing.md
error-codes/: index.html
error-handling/: index.html
examples/: README.md  coordinator.py  mcp_demo.py  run_demo.py
k8s/: README.md  deployment.yaml  ingress.yaml  service.yaml
mcp-integration/: index.html
metrics/: index.html
migration/: index.html
observability/: index.html
product/: README.md  checkpoints.md
raw-fetch/: index.html
schemas/: envelope.schema.json
scripts/: __init__.py  _transport_baseline_v2.3.0.json  _transport_baseline_v2.5.1.json  check_auto_registration_merge_eligible.py  diversify_registry_asap_versions.py  export_schemas.py  generate_types.py  lint_no_transport_growth.py  process_registration.py  process_removal.py  process_revocation.py  regenerate_signed_fixtures.py  seed_registry.py  test_k8s_deploy.sh  test_upgrade_v0_1_0.sh  test_upgrade_v0_3_0.sh  validate_registry.py  validate_revoked.py
search/: search_index.json
security/: index.html
state-management/: index.html
testing/: index.html
tests/: __init__.py  conftest.py  factories.py  s3_regression_test.py  test_cli.py  test_cli_edge_cases.py  test_docs_links.py  test_docs_troubleshooting_smoke.py  test_errors.py  test_schemas.py  test_version.py
transport/: index.html
troubleshooting/: index.html
(+1250 files in other folders)
