[project]
name = "asap-protocol"
version = "0.5.0"
description = "Async Simple Agent Protocol - A streamlined protocol for agent-to-agent communication"
authors = [
    {name = "ASAP Protocol Contributors"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
keywords = ["agent", "protocol", "async", "mcp", "a2a", "communication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.12.5",
    "fastapi>=0.128.0",
    "httpx[http2]>=0.28.1",
    "uvicorn>=0.34",
    "python-ulid>=3.0",
    "packaging>=25.0",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "typer>=0.21.1",
    "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "brotli>=1.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.1",
    "pytest-xdist>=3.5.0",
    "mypy>=1.19.1",
    "ruff>=0.14.14",
    "pip-audit>=2.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.urls]
Homepage = "https://github.com/adriannoes/asap-protocol"
Documentation = "https://adriannoes.github.io/asap-protocol"
Repository = "https://github.com/adriannoes/asap-protocol"
Issues = "https://github.com/adriannoes/asap-protocol/issues"
"PyPI" = "https://pypi.org/project/asap-protocol/"

[project.scripts]
asap = "asap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asap"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".cursor/**",
    ".venv/**",
    "venv/**",
    "__pycache__/**",
    "*.egg-info/**",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "RET",   # flake8-return
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"]
"src/asap/examples/**" = ["T201"]
"benchmarks/**" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src"]  # Ensure src is in PYTHONPATH for pytest
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
# Coverage options: use explicitly when needed (e.g., pytest --cov=src --cov-report=xml)
# NOT included in addopts to avoid conflicts with pytest-xdist (-n auto)
testpaths = ["tests"]
# Note: benchmarks/ excluded from testpaths - Locust monkey-patches gevent/ssl which
# conflicts with pytest-xdist. Run benchmarks separately: uv run pytest benchmarks/
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Ignore slowapi deprecation (asyncio.iscoroutinefunction → inspect.iscoroutinefunction in 3.16)
filterwarnings = [
    "ignore::DeprecationWarning:slowapi.extension",
]

[tool.coverage.run]
source = ["asap"]
branch = true
omit = [
    "src/asap/examples/run_demo.py",
    "src/asap/examples/secure_handler.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "hypothesis>=6.92",
    "jsonschema>=4.20",
    "locust>=2.20",
    "memory-profiler>=0.61",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
]
