[project]
name = "asap-protocol"
version = "1.4.0"
description = "Async Simple Agent Protocol - A streamlined protocol for agent-to-agent communication"
authors = [
    {name = "ASAP Protocol Contributors"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
keywords = ["agent", "protocol", "async", "mcp", "a2a", "communication"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    "aiosqlite>=0.20",
    "cryptography>=41.0",
    "jcs>=0.2.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.12.5",
    "fastapi>=0.128.0",
    "httpx[http2]>=0.28.1",
    "authlib>=1.3",
    "joserfc>=1.0",
    "uvicorn>=0.34",
    "python-ulid>=3.0",
    "packaging>=25.0",
    "limits>=3.0",
    "structlog>=24.1",
    "typer>=0.21.1",
    "watchfiles>=0.21.0",
    "websockets>=12.0",
    "brotli>=1.2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41",
    "opentelemetry-instrumentation-httpx>=0.41",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
    "cryptography>=41.0",
    "jcs>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "brotli>=1.1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.1",
    "pytest-xdist>=3.5.0",
    "mypy>=1.19.1",
    "types-jsonschema>=4.0.0",
    "ruff>=0.14.14",
    "pip-audit>=2.7",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]
dns-sd = [
    "zeroconf>=0.80",
]
# Redis: shared rate limit storage for multi-worker deployments (see rate_limit.py).
redis = [
    "redis>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/adriannoes/asap-protocol"
Documentation = "https://adriannoes.github.io/asap-protocol"
Repository = "https://github.com/adriannoes/asap-protocol"
Issues = "https://github.com/adriannoes/asap-protocol/issues"
"PyPI" = "https://pypi.org/project/asap-protocol/"

[project.scripts]
asap = "asap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asap"]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".cursor/**",
    ".venv/**",
    "venv/**",
    "__pycache__/**",
    "*.egg-info/**",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "RET",   # flake8-return
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"]
"src/asap/examples/**" = ["T201", "ASYNC210"]
"benchmarks/**" = ["T201"]
"tests/**" = ["B008"]
"src/asap/transport/usage_api.py" = ["B008"]
"src/asap/transport/delegation_api.py" = ["B008"]
"src/asap/transport/sla_api.py" = ["B008"]
"src/asap/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
exclude = ["^asap-compliance/"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
# Third-party packages without stubs (fastapi, typer, opentelemetry, etc.).
# Trade-off: typos in import names and imports of removed packages are not reported.
# To tighten: set to false and add per-module override ignore_missing_imports = true
# only for modules that import from untyped packages.
ignore_missing_imports = true
# disable_error_code only where third-party libs are untyped (see overrides below)

[[tool.mypy.overrides]]
module = "asap.models.ids"
disable_error_code = ["no-any-return"]
# ULID.datetime is typed as Any in python-ulid

[[tool.mypy.overrides]]
module = "asap.observability.tracing"
disable_error_code = ["no-any-return"]
# tracer.start_as_current_span returns Any (OpenTelemetry SDK)

[[tool.mypy.overrides]]
module = ["asap.cli", "asap.observability.trace_ui", "asap.transport.server"]
disable_error_code = ["misc"]
# Untyped decorators: Typer @app.command, FastAPI @app.get/@app.post

[[tool.mypy.overrides]]
module = "asap.transport.middleware"
disable_error_code = ["misc"]
# BaseHTTPMiddleware (Starlette) has type Any when ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "asap.auth.middleware"
disable_error_code = ["misc"]
# OAuth2Middleware subclasses BaseHTTPMiddleware (Starlette); same untyped base in CI

[[tool.mypy.overrides]]
module = "tests.*"
# Relaxed profile for tests: mocks, fixtures, pytest patterns (ADR-23)
disallow_untyped_defs = false
warn_return_any = false
disallow_any_generics = false
disable_error_code = [
    "no-any-return",
    "misc",              # untyped decorators, monkey-patching
    "attr-defined",      # dynamic pytest/fixture attributes
    "arg-type",          # mock/fixture argument flexibility
    "override",          # test doubles overriding base types
    "no-untyped-def",    # pytest fixtures/callbacks often untyped
    "return",            # async test helpers, fixtures
    "index",             # test data structures
    "call-arg",          # intentional invalid args in validation tests
    "comparison-overlap", # enum comparison in tests
    "union-attr",        # union narrowing in test assertions
    "method-assign",     # monkey-patching methods in mocks
    "assignment",        # mock/fixture assignment flexibility
    "operator",          # test assertions with dynamic types
    "return-value",      # async/sync handler return in tests
    "redundant-cast",    # explicit casts in tests
    "truthy-function",   # type() checks in tests
    "name-defined",      # dynamic imports in example tests
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src", ".", "asap-compliance"]  # src for asap; . for tests; asap-compliance for harness
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
# Coverage options: use explicitly when needed (e.g., pytest --cov=src --cov-report=xml)
# NOT included in addopts to avoid conflicts with pytest-xdist (-n auto)
testpaths = ["tests"]
# Note: benchmarks/ excluded from testpaths - Locust monkey-patches gevent/ssl which
# conflicts with pytest-xdist. Run benchmarks separately: uv run pytest benchmarks/
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Websockets 14.0+ deprecates legacy API, but migration is complex. Suppress for v1.1.0.
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    "ignore:remove second argument of ws_handler:DeprecationWarning",
    "ignore:EdDSA is deprecated:joserfc.errors.SecurityWarning",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]

[tool.coverage.run]
source = ["asap"]
branch = true
omit = [
    "src/asap/examples/*",  # Runnable examples and demos; tested via tests/examples/
    "src/asap/discovery/dnssd.py",  # P3 optional, deferred to v1.1.1+
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "hypothesis>=6.92",
    "jsonschema>=4.20",
    "locust>=2.20",
    "memory-profiler>=0.61",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pip>=26.0.1",
]
