[project]
name = "asap-protocol"
version = "2.5.0"
description = "Async Simple Agent Protocol - A streamlined protocol for agent-to-agent communication"
authors = [
    {name = "ASAP Protocol Contributors"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
keywords = ["agent", "protocol", "async", "mcp", "a2a", "communication"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    "aiosqlite>=0.20",
    # Upper-bound majors per SECURITY.md dependency policy.
    "cryptography>=48.0.1,<49",
    "jcs>=0.2.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.12.5,<3",
    "fastapi>=0.136.1",
    "httpx[http2]>=0.28.1",
    "authlib>=1.6.12,<2",
    "joserfc>=1.6.3,<2",
    "uvicorn>=0.34",
    "python-ulid>=3.0",
    "packaging>=25.0",
    "limits>=3.0",
    "structlog>=24.1",
    "typer>=0.21.1",
    "watchfiles>=0.21.0",
    "websockets>=12.0",
    "brotli>=1.2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-instrumentation-fastapi>=0.41",
    "opentelemetry-instrumentation-httpx>=0.41",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20",
]

[project.optional-dependencies]
dev = [
    "asgi-lifespan>=2.1.0",
    "brotli>=1.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-benchmark>=5.1",
    "pytest-xdist>=3.5.0",
    "mypy>=1.19.1",
    "types-jsonschema>=4.0.0",
    "ruff>=0.14.14",
    "pip-audit>=2.7",
]
docs = [
    "ghp-import>=2.1.0",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.21.3",
]
dns-sd = [
    "zeroconf>=0.149.5",
]
# Redis: shared rate limit storage for multi-worker deployments (see rate_limit.py).
redis = [
    "redis>=5.0.0",
]
# Optional WebAuthn (real attestation/assertion when extra installed).
webauthn = [
    "webauthn>=2.6,<3",
]
# Framework integrations (Sprint E3 — PKG-003).
mcp = [
    "mcp>=1.0.0",
]
langchain = [
    "langchain-core>=1.3.3",
]
crewai = [
    "crewai>=0.80",
]
llamaindex = [
    "llama-index-core>=0.10",
]
smolagents = [
    "smolagents>=1.24.0",
]
pydanticai = [
    "pydantic-ai>=1.99.0",
]
openclaw = [
    "openclaw-sdk>=2.0",
]
# OpenAPI 3.x spec parsing for asap.adapters.openapi (Sprint S1).
openapi = [
    "openapi-pydantic>=0.5",
]
telemetry = [
    "pypistats>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/adriannoes/asap-protocol"
Documentation = "https://adriannoes.github.io/asap-protocol"
Repository = "https://github.com/adriannoes/asap-protocol"
Issues = "https://github.com/adriannoes/asap-protocol/issues"
"PyPI" = "https://pypi.org/project/asap-protocol/"

# Override transitive dependencies for security fixes:
# - pyjwt>=2.13.0 for PYSEC-2026-175/177/178/179 (CVE-2026-32597 baseline at 2.12.0)
# - aiohttp>=3.14.0,<4 for CVE-2026-34993 / CVE-2026-47265 (transitive, e.g. openclaw/mcp stacks)
# - zeroconf>=0.149.5 for CVE-2026-47180/47183/47184 ([dns-sd] extra)
# - pyasn1>=0.6.3 for CVE-2026-30922 (DoS via unbounded recursion)
# - tinytag>=2.2.1 for CVE-2026-32889
# - cryptography>=48.0.1 for GHSA-537c-gmf6-5ccf (CVE-2026-39892 / CVE-2026-34073 baseline at 46.0.7)
# - requests>=2.33.0 for CVE-2026-25645 (extract_zipped_paths temp file)
# - pillow>=12.2.0 for CVE-2026-40192 (transitive, e.g. pdf/vision stacks)
# - pytest>=9.0.3 for CVE-2025-71176 (dev)
# - python-multipart>=0.0.31 for CVE-2026-53538–53540 (FastAPI stack; prior floor 0.0.27)
# - starlette>=1.3.1 for CVE-2026-54282 / CVE-2026-54283 (FastAPI stack)
# - pygments>=2.20.0 for CVE-2026-4539
# - langsmith>=0.8.18 for GHSA-f4xh-w4cj-qxq8 (prior: CVE-2026-45134 at >=0.8.0)
# - langchain-core>=1.3.3 for CVE-2026-44843
# - urllib3>=2.7.0 for CVE-2026-44431 / CVE-2026-44432
# - pip>=26.1.2 for PYSEC-2026-196 (CVE-2026-6357 baseline at 26.1)
# - python-dotenv>=1.2.2 for CVE-2026-28684 (transitive, e.g. pydantic-settings / uvicorn stacks)
# - pydantic-settings>=2.14.2 for GHSA-4xgf-cpjx-pc3j (transitive, e.g. langchain / mcp stacks)
# - msgpack>=1.2.1 for GHSA-6v7p-g79w-8964 (transitive, e.g. locust / cache stacks)
# - idna>=3.15 for CVE-2026-45409 (DoS in idna.encode; transitive via httpx/requests)
# - markdown>=3.10.2 for PYSEC-2026-89 (DoS in html.parser during Markdown parse; mkdocs stack)
# - pymdown-extensions>=10.21.3 for CVE-2026-46338 (snippets base_path prefix bypass; mkdocs stack)
[tool.uv]
override-dependencies = [
    "aiohttp>=3.14.0,<4",
    "pyjwt>=2.13.0,<3",
    "pyasn1>=0.6.3",
    "tinytag>=2.2.1",
    "cryptography>=48.0.1,<49",
    "requests>=2.33.0",
    "pillow>=12.2.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.31",
    "starlette>=1.3.1",
    "pygments>=2.20.0",
    "langsmith>=0.8.18",
    "langchain-core>=1.3.3",
    "urllib3>=2.7.0",
    "pip>=26.1.2",
    "zeroconf>=0.149.5",
    "python-dotenv>=1.2.2",
    "idna>=3.15",
    "markdown>=3.10.2",
    "pymdown-extensions>=10.21.3",
    "pydantic-settings>=2.14.2",
    "msgpack>=1.2.1",
]

[project.scripts]
asap = "asap.cli:main"
asap-mcp-server = "asap.mcp.serve:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asap"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/schemas",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".cursor/**",
    ".venv/**",
    "venv/**",
    "__pycache__/**",
    "*.egg-info/**",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
    "RET",   # flake8-return
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"]
"src/asap/examples/**" = ["T201", "ASYNC210"]
"examples/**" = ["T201"]
"benchmarks/**" = ["T201"]
"tests/**" = ["B008"]
"src/asap/transport/usage_api.py" = ["B008"]
"src/asap/transport/delegation_api.py" = ["B008"]
"src/asap/transport/sla_api.py" = ["B008"]
"src/asap/cli/__init__.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
exclude = ["^asap-compliance/"]
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
plugins = ["pydantic.mypy"]
# Third-party packages without stubs (fastapi, typer, opentelemetry, etc.).
# Trade-off: typos in import names and imports of removed packages are not reported.
# To tighten: set to false and add per-module override ignore_missing_imports = true
# only for modules that import from untyped packages.
ignore_missing_imports = true
# disable_error_code only where third-party libs are untyped (see overrides below)

[[tool.mypy.overrides]]
module = "asap.models.ids"
disable_error_code = ["no-any-return"]
# ULID.datetime is typed as Any in python-ulid

[[tool.mypy.overrides]]
module = "asap.observability.tracing"
disable_error_code = ["no-any-return"]
# tracer.start_as_current_span returns Any (OpenTelemetry SDK)

[[tool.mypy.overrides]]
module = ["asap.cli", "asap.observability.trace_ui", "asap.transport.server", "asap.mcp.serve"]
disable_error_code = ["misc"]
# Untyped decorators: Typer @app.command, FastAPI @app.get/@app.post, FastMCP @tool

[[tool.mypy.overrides]]
module = "asap.transport.middleware"
disable_error_code = ["misc"]
# BaseHTTPMiddleware (Starlette) has type Any when ignore_missing_imports=true

[[tool.mypy.overrides]]
module = "asap.auth.middleware"
disable_error_code = ["misc"]
# OAuth2Middleware subclasses BaseHTTPMiddleware (Starlette); same untyped base in CI

[[tool.mypy.overrides]]
module = "tests.*"
# Relaxed profile for tests: mocks, fixtures, pytest patterns (ADR-23)
disallow_untyped_defs = false
warn_return_any = false
disallow_any_generics = false
disable_error_code = [
    "no-any-return",
    "misc",              # untyped decorators, monkey-patching
    "attr-defined",      # dynamic pytest/fixture attributes
    "arg-type",          # mock/fixture argument flexibility
    "override",          # test doubles overriding base types
    "no-untyped-def",    # pytest fixtures/callbacks often untyped
    "return",            # async test helpers, fixtures
    "index",             # test data structures
    "call-arg",          # intentional invalid args in validation tests
    "comparison-overlap", # enum comparison in tests
    "union-attr",        # union narrowing in test assertions
    "method-assign",     # monkey-patching methods in mocks
    "assignment",        # mock/fixture assignment flexibility
    "operator",          # test assertions with dynamic types
    "return-value",      # async/sync handler return in tests
    "redundant-cast",    # explicit casts in tests
    "truthy-function",   # type() checks in tests
    "name-defined",      # dynamic imports in example tests
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
pythonpath = ["src", ".", "asap-compliance"]  # src for asap; . for tests; asap-compliance for harness
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--strict-config",
]
# Coverage options: use explicitly when needed (e.g., pytest --tb=short --cov=asap --cov-report=xml --cov-fail-under=85)
# NOT included in addopts to avoid conflicts with pytest-xdist (-n auto)
testpaths = ["tests"]
# Note: benchmarks/ excluded from testpaths - Locust monkey-patches gevent/ssl which
# conflicts with pytest-xdist. Run benchmarks separately: uv run pytest benchmarks/
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # Websockets 14.0+ deprecates legacy API, but migration is complex. Suppress for v1.1.0.
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    "ignore:remove second argument of ws_handler:DeprecationWarning",
    "ignore:EdDSA is deprecated:joserfc.errors.SecurityWarning",
    "ignore:coroutine .* was never awaited:RuntimeWarning",
]

[tool.coverage.run]
source = ["asap"]
branch = true
omit = [
    "src/asap/examples/*",  # Runnable examples and demos; tested via tests/examples/
    "src/asap/discovery/dnssd.py",  # P3 optional, deferred to v1.1.1+
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "hypothesis>=6.92",
    "jsonschema>=4.20",
    "locust>=2.20",
    "memory-profiler>=0.61",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pip>=26.1.2",
]
