[project]
name = "asap-compliance"
version = "0.1.0"
description = "ASAP Protocol compliance testing harness"
authors = [
    {name = "ASAP Protocol Contributors"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "Apache-2.0"}
keywords = ["asap", "protocol", "compliance", "testing", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

dependencies = [
    "pytest>=8.0",
    "httpx>=0.28.0",
    "pydantic>=2.12.0",
    "asap-protocol>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.14.0",
]

[project.entry-points.pytest11]
asap_compliance = "asap_compliance.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asap_compliance"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-v", "--strict-markers"]
asyncio_mode = "auto"
